--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "append-field": "^2.0.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "isarray": "^2.0.5",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.2",
+    "multer": "^2.0.0",
     "pg": "^8.15.6",
     "pg-hstore": "^2.3.4",
+    "readable-stream": "^3.6.0",
+    "safe-buffer": "^5.2.1",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
